--- a/WebStore/Views/Users/Details.cshtml
+++ b/WebStore/Views/Users/Details.cshtml
@@ -65,3 +65,6 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.UserID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+
+<script></script>
