--- a/WebStore/Views/Shared/_NavigationBar.cshtml
+++ b/WebStore/Views/Shared/_NavigationBar.cshtml
@@ -125,23 +125,39 @@
         <!-- Group C: User -->
         <div class="ng-user d-flex align-items-center">
 
+            <!-- Favourites -->
             <a href="@Url.Action("SavedList", "Users", new {userID = 1})" class="bi bi-bookmark-heart" style="margin-right: 15px; color: white; font-size: 2.5rem;" title="View Favourites"></a>
 
-            <a href="@Url.Action("Cart", "UserCarts", new {userID = 1})" class="bi bi-cart3 position-relative" style="margin-right: 30px; color: white; font-size: 2.5rem;" title="View Cart">
-                <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.6rem; margin-top: 20%; margin-left: 10%;">
-                    @Html.Action("TotalItemsInCart", "UserCarts", new { userID = 1 })
-                    <span class="visually-hidden">items in cart</span>
-                </span>
-            </a>
+            <!-- Cart -->
+            <div class="dropdown">
+                <a href="#" role="button" id="cartDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="bi bi-cart3 position-relative" style="margin-right: 30px; color: white; font-size: 2.5rem;" title="View Cart">
+                    <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.6rem; margin-top: 15%;">
+                        @Html.Action("TotalItemsInCart", "UserCarts", new { userID = 1 })
+                        <span class="visually-hidden">items in cart</span>
+                    </span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                    <li><a class="dropdown-item" href="@Url.Action("Cart", "UserCarts", new {userID = 1})">View Cart</a></li>
+
+                    @{
+                        @Html.Action("PartialCart", "UserCarts", new { userID = 1 })
+                    }
+
+                </ul>
+            </div>
 
 
+
+
+
+
+            <!-- User Profile -->
             <div class="dropdown">
                 <a href="#" role="button" id="userDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- Migrate over to using GetImage - this file needs a model to reference the user's login session -->
                     <img src="@Url.Action("GetUserProfileImage", "Images", new { userID = 1 })" class="rounded-circle" alt="User Profile Image" />
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                    <!-- Add dropdown items as needed -->
                     <li><a class="dropdown-item" href="@Url.Action("UserProfile", "Users", new { userID = 1 })">Profile</a></li>
                     <li><a class="dropdown-item" href="@Url.Action("Index", "Users")">View All Users</a></li>
                     <li><a class="dropdown-item" href="@Url.Action("Cart", "UserCarts", new {userID = 1})">View Cart</a></li>
