--- a/WebStore/Views/UserCarts/_Cart_Partial.cshtml
+++ b/WebStore/Views/UserCarts/_Cart_Partial.cshtml
@@ -50,7 +50,7 @@
     function ConfirmOrder(cartTotal)
     {
         var itemsList = 'This would make a purchase for items totalling\n\n';
-        itemsList += '£' + cartTotal
+        itemsList += '£' + cartTotal;
 
         alert(itemsList);
     }
